--- a/Team16_Milestone2_TrackAHike/app/src/main/res/layout/settings.xml
+++ b/Team16_Milestone2_TrackAHike/app/src/main/res/layout/settings.xml
@@ -66,14 +66,18 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="0dp"
-                    android:hint="Change Age" />
+                    android:hint="Change Age"
+                    android:inputType="number"
+                    />
+
+
 
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/genderLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="150dp"
                 android:orientation="horizontal"
                 android:paddingBottom="20dp">
 
@@ -84,12 +88,40 @@
                     android:layout_weight="10"
                     android:text="Gender" />
 
-                <EditText
-                    android:id="@+id/gender"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="0dp"
-                    android:hint="Change Gender" />
+                <RadioGroup
+                    android:id="@+id/Gender"
+                    android:layout_width="353dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="10"
+                    android:gravity="right">
+
+                    <RadioButton
+                        android:id="@+id/Male"
+                        android:layout_width="90dp"
+                        android:layout_height="wrap_content"
+                        android:text="Male"
+                        android:onClick = "btnClicked"
+
+                        />
+
+                    <RadioButton
+                        android:id="@+id/Female"
+                        android:layout_width="90dp"
+                        android:layout_height="wrap_content"
+                        android:text="Female"
+                        android:onClick = "btnClicked"
+                        />
+
+                    <RadioButton
+                        android:id="@+id/Other"
+                        android:layout_width="90dp"
+                        android:layout_height="wrap_content"
+                        android:text="Other"
+                        android:onClick = "btnClicked"
+
+                        />
+
+                </RadioGroup>
 
             </LinearLayout>
 
@@ -113,7 +145,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="0dp"
-                    android:hint="Change Height in cm" />
+                    android:hint="Change Height in cm"
+                    android:inputType="number"
+                    />
 
             </LinearLayout>
 
