--- a/Team16_Milestone2_TrackAHike/app/src/main/res/drawable/dashboard_nametag.xml
+++ b/Team16_Milestone2_TrackAHike/app/src/main/res/drawable/dashboard_nametag.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="148dp"
-    android:height="36dp"
+    android:width="16sp"
+    android:height="16sp"
     android:viewportWidth="148"
     android:viewportHeight="36">
   <path
