--- a/Team16_Milestone2_TrackAHike/app/src/main/res/drawable/filter_textbg.xml
+++ b/Team16_Milestone2_TrackAHike/app/src/main/res/drawable/filter_textbg.xml
@@ -1,7 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="255dp"
-    android:height="53dp"
+    android:width="14sp"
+    android:height="14sp"
     android:viewportWidth="255"
     android:viewportHeight="53">
   <path
