--- a/Team16_Milestone2_TrackAHike/app/src/main/res/layout/settings.xml
+++ b/Team16_Milestone2_TrackAHike/app/src/main/res/layout/settings.xml
@@ -1,156 +1,191 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
-
+    android:background="@drawable/bg"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="20dp"
-        android:text="Settings:"
-        android:textSize="24sp" />
+        android:background="@drawable/pagetitle"
+        android:gravity="start|center_vertical"
+        android:textColor="@color/white"
+        android:text="Settings"
+        android:textSize="24sp"
+        android:paddingLeft="20dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"/>
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="wrap_content"
+        android:layout_weight="2">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-
             <LinearLayout
-                android:id="@+id/userLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingBottom="20dp">
+                android:background="@drawable/settings_container"
+                android:layout_marginLeft="35dp"
+                android:layout_marginRight="35dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:orientation="vertical"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp">
 
-                <TextView
-                    android:id="@+id/textView"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:id="@+id/userLayout"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="10"
-                    android:text="Name" />
+                    android:orientation="horizontal"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginTop="10dp">
 
-                <EditText
-                    android:id="@+id/firstName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="0dp"
-                    android:hint="Change Name" />
-
-            </LinearLayout>
-            <LinearLayout
-                android:id="@+id/ageLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingBottom="20dp">
-
-                <TextView
-                    android:id="@+id/textView3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="10"
-                    android:text="Age" />
-
-                <EditText
-                    android:id="@+id/age"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="0dp"
-                    android:hint="Change Age"
-                    android:inputType="number"
-                    />
-
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/genderLayout"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:orientation="horizontal"
-                android:paddingBottom="20dp">
-
-                <TextView
-                    android:id="@+id/textView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="10"
-                    android:text="Gender" />
-
-                <RadioGroup
-                    android:id="@+id/Gender"
-                    android:layout_width="353dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="10"
-                    android:gravity="right">
-
-                    <RadioButton
-                        android:id="@+id/Male"
-                        android:layout_width="90dp"
+                    <TextView
+                        android:id="@+id/textView"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Male"
-                        android:onClick = "btnClicked"
+                        android:layout_weight="10"
+                        android:text="Name"
+                        android:textSize="16sp"
+                        android:textColor="@color/white"/>
 
-                        />
-
-                    <RadioButton
-                        android:id="@+id/Female"
-                        android:layout_width="90dp"
+                    <EditText
+                        android:id="@+id/firstName"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Female"
-                        android:onClick = "btnClicked"
-                        />
+                        android:layout_marginTop="0dp"
+                        android:hint="Change Name"
+                        android:textColorHint="@color/white"
+                        android:backgroundTint="@color/white"
+                        android:textSize="16sp"
+                        android:textColor="@color/white"/>
 
-                    <RadioButton
-                        android:id="@+id/Other"
-                        android:layout_width="90dp"
+                </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/ageLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginBottom="20dp">
+
+                    <TextView
+                        android:id="@+id/textView3"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Other"
-                        android:onClick = "btnClicked"
+                        android:layout_weight="10"
+                        android:text="Age"
+                        android:textSize="16sp"
+                        android:textColor="@color/white"/>
 
-                        />
+                    <EditText
+                        android:id="@+id/age"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="Change Age"
+                        android:inputType="number"
+                        android:textColorHint="@color/white"
+                        android:backgroundTint="@color/white"
+                        android:textSize="16sp"
+                        android:textColor="@color/white"/>
 
-                </RadioGroup>
+                </LinearLayout>
 
-            </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/genderLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:orientation="horizontal"
+                    android:layout_marginBottom="20dp">
+
+                    <TextView
+                        android:id="@+id/textView2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Gender"
+                        android:textSize="16sp"
+                        android:textColor="@color/white"/>
+
+                    <RadioGroup
+                        android:id="@+id/Gender"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="5"
+                        android:gravity="right">
+
+                        <RadioButton
+                            android:id="@+id/Male"
+                            android:layout_width="90dp"
+                            android:layout_height="wrap_content"
+                            android:text="Male"
+                            android:onClick="btnClicked"
+                            android:textSize="16sp"
+                            android:textColor="@color/white"
+                            android:buttonTint="@color/white"/>
+
+                        <RadioButton
+                            android:id="@+id/Female"
+                            android:layout_width="90dp"
+                            android:layout_height="wrap_content"
+                            android:text="Female"
+                            android:onClick="btnClicked"
+                            android:textSize="16sp"
+                            android:textColor="@color/white"
+                            android:buttonTint="@color/white" />
+
+                        <RadioButton
+                            android:id="@+id/Other"
+                            android:layout_width="90dp"
+                            android:layout_height="wrap_content"
+                            android:text="Other"
+                            android:onClick="btnClicked"
+                            android:textSize="16sp"
+                            android:textColor="@color/white"
+                            android:buttonTint="@color/white"/>
+
+                    </RadioGroup>
+
+                </LinearLayout>
 
 
-            <LinearLayout
-                android:id="@+id/heightLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingBottom="20dp">
-
-                <TextView
-                    android:id="@+id/textView9"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:id="@+id/heightLayout"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="10"
-                    android:text="Height in cm" />
+                    android:orientation="horizontal"
+                    android:layout_marginBottom="10dp">
 
-                <EditText
-                    android:id="@+id/height"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="0dp"
-                    android:hint="Change Height in cm"
-                    android:inputType="number"
-                    />
+                    <TextView
+                        android:id="@+id/textView9"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="10"
+                        android:text="Height in cm"
+                        android:textSize="16sp"
+                        android:textColor="@color/white"/>
 
+                    <EditText
+                        android:id="@+id/height"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="0dp"
+                        android:hint="Change Height in cm"
+                        android:inputType="number"
+                        android:textColorHint="@color/white"
+                        android:backgroundTint="@color/white"
+                        android:textSize="16sp"
+                        android:textColor="@color/white"/>
+
+                </LinearLayout>
             </LinearLayout>
-
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -158,60 +193,92 @@
                 android:orientation="horizontal"
                 android:gravity="center"
                 android:paddingBottom="20dp">
-
 
                 <Button
                     android:id="@+id/submitButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="0dp"
+                    android:background="@drawable/button"
+                    android:padding="10dp"
                     android:onClick="submit"
-                    android:text="Submit" />
+                    android:text="Submit"
+                    android:textSize="14sp"
+                    android:textColor="@color/white"/>
 
             </LinearLayout>
-
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:orientation="horizontal"
-                android:paddingBottom="20dp">
+                android:orientation="vertical">
+                <ImageView
+                    android:id="@+id/imageViewCapturedImg"
+                    android:layout_width="match_parent"
+                    android:layout_height="283dp"
+                    android:layout_marginLeft="35dp"
+                    android:layout_marginRight="35dp"
+                    android:layout_marginBottom="20dp"/>
                 <Button
                     android:id="@+id/StartCamera"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:text="Change Profile Picture" />
-
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="283dp"
-                android:gravity="center"
-                android:paddingBottom="10dp">
-
-
-                <ImageView
-                    android:id="@+id/imageViewCapturedImg"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="40dp"
-                    android:layout_weight="1" />
-
+                    android:background="@drawable/button"
+                    android:padding="10dp"
+                    android:layout_marginBottom="20dp"
+                    android:text="Change Profile Picture"
+                    android:textSize="14sp"
+                    android:textColor="@color/white"/>
 
             </LinearLayout>
 
 
         </LinearLayout>
 
-
-
     </ScrollView>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:background="@drawable/bottombar">
+
+        <Button
+            android:id="@+id/allRecButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button"
+            android:padding="10dp"
+            android:layout_marginRight="5dp"
+            android:onClick="gotoRecords"
+            android:text="All records"
+            android:textSize="14sp"
+            android:textColor="@color/white"/>
+        <Button
+            android:id="@+id/homeButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button"
+            android:padding="10dp"
+            android:layout_marginRight="5dp"
+            android:onClick="gotoHome"
+            android:text="Home"
+            android:textSize="14sp"
+            android:textColor="@color/white"/>
+        <Button
+            android:id="@+id/trackButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button"
+            android:padding="10dp"
+            android:onClick="gotoTracking"
+            android:text="Track"
+            android:textSize="14sp"
+            android:textColor="@color/white"/>
+
+    </LinearLayout>
 
 </LinearLayout>
 
